@@ -9,6 +9,7 @@ Cobbler CHANGELOG
 - (BUGF) Cleaned up generated comments in settings files
 - (BUGF) Unhide per-system post-install kernel options
 - (BUGF) Unhide owners fields
+- (BUGF) fix "cobbler profile/system dumpvars" command
 
 - Sep 17 2009 - for 2.0 release
 - Development release start
